--- a/curriculo/src/App.css
+++ b/curriculo/src/App.css
@@ -1,38 +1,40 @@
 .dados {
   background-color: rgb(19, 73, 40);
-  height: 100%;
+  height: auto;
   width: 20%;
 
   display: flex;
   align-items: center;
   justify-content: center;
-  
+
   flex-wrap: nowrap;
   flex-direction: column;
 }
 
 .foto-conteudo {
-  margin: 2% auto;
-  width: auto;
+  margin: 15px auto;
+  width: 100%;
   overflow-wrap: break-word;
+
+
   word-wrap: break-word;
   word-break: break-word;
   display: flex;
   justify-items: center;
   flex-direction: column;
   align-items: center;
-  
 }
-
 
 h1 {
   color: white;
   font-family: "Roboto Slab", serif;
   font-size: 35px;
   margin: 3% 18%;
+  margin-top: 30px;
 }
 
-.nome, .sou {
+.nome,
+.sou {
   margin: 0.5em 1.5em;
 }
 .sou {
@@ -44,7 +46,12 @@ hr {
   border: 2px solid rgb(0, 0, 0);
 }
 .aprofundado {
- 
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  height: 100%;
+  padding: 10px;
+  text-align: justify;
 }
 .logo-unifor {
   margin: 10px 0px;
@@ -54,10 +61,10 @@ hr {
   border-radius: 12px;
 }
 
-.main{
-border: solid blue;
-height: 100vh;
-width: 100%;
+.main {
+  
+  height: 100%;
+  width: 100%;
 }
 
 .conteiner-c {
@@ -66,59 +73,114 @@ width: 100%;
   flex-direction: column;
   justify-content: center;
   width: 100%;
+  overflow: auto;
+  
+
   overflow-wrap: break-word;
   word-wrap: break-word;
   word-break: break-word;
+  
 }
-.conteiner-flex-logo{
-  margin: 0px 18%;
-}
-.conteiner-f{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
+.esquerda{
 
+
+
+
+  
   
 
 }
+.conteiner-flex-logo {
+  margin: 0px 18%;
+}
+.conteiner-f {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  overflow: auto;
+  margin-top: 20px;
+  
+
+}
+
 .contato {
   color: white;
   margin: 3% 18%;
   width: auto;
 }
 
-
-#root {
+#root,
+.body {
   margin: 0px;
   width: 100%;
   height: 100vh;
 }
 
+.sobre-min-text,
+.experiencias-text,
+.habilidades-text {
+  color: rgb(19, 73, 40);
+}
+.lista-habilidades{
+  overflow: auto;
+}
+.habilidades,
+.experiencias,
+.sobre-min {
+  border: 4px solid transparent;
+  background: linear-gradient(rgb(255, 255, 255), white) padding-box,
+  linear-gradient(rgb(34, 133, 83), rgb(49, 211, 130), rgb(66, 47, 212)) border-box ;
+  border-radius: 20px; 
+  
+
+  margin-bottom: 10px;
+  margin-right: 2 0px;
+  height: 35%;
+  overflow: auto;
+  padding: 10px;
+}
+
+p {
+  font-family: "Roboto Slab", serif;
+  font-size: 14px;
+  text-align: justify;
+  text-justify: inter-word;
+  margin: 0px;
+  padding: 0px;
+}
 
 @media screen and (max-width: 1300px)  {
   h1 {
     font-size: 15px;
+    margin-top: 50px;
   }
-  .nome{
+  .nome {
     font-size: 12px;
   }
   .sou {
     font-size: 12px;
   }
-  .foto {
-    font-size: 100px;
-  }
+
   .conteiner-flex-logo {
     display: block;
-    
   }
-  .dados{
+  .foto {
+    font-size: 3.8rem;
+  }
+  .dados {
     width: 40%;
   }
-  .contato{
+  .contato {
     font-size: 13px;
   }
-  h5{
+  h5 {
     font-size: 13px;
   }
+}
+
+@media screen and (max-height: 700px) {
+
+
+
+  
 }
