--- a/curriculo/src/App.css
+++ b/curriculo/src/App.css
@@ -16,7 +16,6 @@
   width: 100%;
   overflow-wrap: break-word;
 
-
   word-wrap: break-word;
   word-break: break-word;
   display: flex;
@@ -62,7 +61,6 @@ hr {
 }
 
 .main {
-  
   height: 100%;
   width: 100%;
 }
@@ -74,21 +72,12 @@ hr {
   justify-content: center;
   width: 100%;
   overflow: auto;
-  
 
   overflow-wrap: break-word;
   word-wrap: break-word;
   word-break: break-word;
-  
 }
-.esquerda{
-
-
-
-
-  
-  
-
+.esquerda {
 }
 .conteiner-flex-logo {
   margin: 0px 18%;
@@ -98,9 +87,6 @@ hr {
   flex-direction: column;
   width: 100%;
   overflow: auto;
-  margin-top: 20px;
-  
-
 }
 
 .contato {
@@ -121,7 +107,7 @@ hr {
 .habilidades-text {
   color: rgb(19, 73, 40);
 }
-.lista-habilidades{
+.lista-habilidades {
   overflow: auto;
 }
 .habilidades,
@@ -129,9 +115,9 @@ hr {
 .sobre-min {
   border: 4px solid transparent;
   background: linear-gradient(rgb(255, 255, 255), white) padding-box,
-  linear-gradient(rgb(34, 133, 83), rgb(49, 211, 130), rgb(66, 47, 212)) border-box ;
-  border-radius: 20px; 
-  
+    linear-gradient(rgb(34, 133, 83), rgb(49, 211, 130), rgb(66, 47, 212))
+      border-box;
+  border-radius: 20px;
 
   margin-bottom: 10px;
   margin-right: 2 0px;
@@ -149,7 +135,7 @@ p {
   padding: 0px;
 }
 
-@media screen and (max-width: 1300px)  {
+@media screen and (max-width: 1300px) {
   h1 {
     font-size: 15px;
     margin-top: 50px;
@@ -178,9 +164,8 @@ p {
   }
 }
 
-@media screen and (max-height: 700px) {
-
-
-
-  
+@media screen and (max-width: 505px) {
+  .contato {
+    font-size: 10px;
+  }
 }
